# server

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  build.sh  dockerfile  rest.rest
src/: main.rs  orderroutes.rs  otherroutes.rs  productroutes.rs  userroutes.rs
