[package]
name = "actixlocal"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.2.1"
redis = { version = "0.22.1", features = ["tokio-native-tls-comp"] }
serde = { version = "1.0.150", features = ["derive"] }
serde_json = "1.0.89"
uuid = { version = "1.2.2", features = ["v4", "serde"] }
chrono = { version = "0.4.22", features = ["serde"] }
tower-http = { version = "0.3.5", features = ["cors"] }
surrealdb = "1.0.0-beta.8"
dotenv = "0.15.0"
http = "0.2.8"
argon2 = "0.4.1"
tower-cookies = "0.8.0"
jsonwebtoken = "8.2.0"
lettre = "0.10.1"
tokio = { version = "1.23.0", features = ["full"] }
bigdecimal = { version = "0.3.0", features = ["serde"] }
sqlx = {version = "0.6.2", features = ["runtime-tokio-native-tls", "postgres", "offline", "time", "chrono", "uuid", "bigdecimal"] }
rquickjs-sys = "0.1.7"

[features]
build-bindings = []
